# django-components

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Pipfile  README.md  latest  mkdocs.yml  pyproject.toml  pytest.ini  requirements-ci.in  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  supported_versions.py  tox.ini  versions.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: automate-dependabot.yml  contributors.yml  docs.yml  index.yml  publish-to-pypi.yml  tests.yml
0.102/: 404.html  objects.inv  sitemap.xml
0.102/CHANGELOG/: index.html
0.102/SUMMARY/: index.html
0.102/slot_rendering/: index.html
0.102/slots_and_blocks/: index.html
0.110/: index.html
0.110/search/: search_index.json
0.111/: 404.html  sitemap.xml
0.111/CHANGELOG/: index.html
0.111/SUMMARY/: index.html
0.112/CHANGELOG/: index.html
0.112/CODE_OF_CONDUCT/: index.html
0.112/search/: search_index.json
0.113/: objects.inv
0.114/: sitemap.xml
0.114/CHANGELOG/: index.html
0.114/scripts/: reference.py
0.114/search/: search_index.json
0.115/migrating_from_safer_staticfiles/: index.html
0.115/release_notes/: index.html
0.115/scripts/: reference.py
0.116/: index.html  sitemap.xml
0.116/SUMMARY/: index.html
0.116/release_notes/: index.html
0.117/: sitemap.xml
0.117/release_notes/: index.html
0.118/release_notes/: index.html
0.118/search/: search_index.json
0.119/: sitemap.xml
0.119/migrating_from_safer_staticfiles/: index.html
0.119/release_notes/: index.html
0.119/search/: search_index.json
0.120/: index.html
0.120/release_notes/: index.html
0.121/release_notes/: index.html
0.122/: sitemap.xml
0.122/migrating_from_safer_staticfiles/: index.html
0.122/search/: search_index.json
0.123/: objects.inv
0.123/SUMMARY/: index.html
0.123/release_notes/: index.html
0.123/scripts/: reference.py
0.124/: 404.html  objects.inv  sitemap.xml
0.124/migrating_from_safer_staticfiles/: index.html
0.124/release_notes/: index.html
0.124/scripts/: reference.py
0.125/: 404.html  sitemap.xml
0.125/scripts/: reference.py
0.126/css/: style.css
0.126/migrating_from_safer_staticfiles/: index.html
0.126/release_notes/: index.html
0.127/release_notes/: index.html
0.128/: 404.html
0.128/release_notes/: index.html
0.128/search/: search_index.json
0.129/: objects.inv  sitemap.xml
0.129/SUMMARY/: index.html
0.129/migrating_from_safer_staticfiles/: index.html
0.92/: 404.html  sitemap.xml
0.92/CODE_OF_CONDUCT/: index.html
0.96/: 404.html  index.html  objects.inv
0.96/CHANGELOG/: index.html
0.96/SUMMARY/: index.html
0.96/license/: index.html
0.96/search/: search_index.json
0.96/slot_rendering/: index.html
0.97/: 404.html  index.html  objects.inv
0.97/SUMMARY/: index.html
0.97/license/: index.html
0.97/search/: search_index.json
benchmarks/: component_rendering.py  test_lexer_performance.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/CODE_OF_CONDUCT/: index.html
dev/SUMMARY/: index.html
dev/license/: index.html
dev/migrating_from_safer_staticfiles/: index.html
dev/release_notes/: index.html
dev/scripts/: extensions.py
dev/search/: search_index.json
dev/slot_rendering/: index.html
dev/slots_and_blocks/: index.html
django_components/: __init__.py  app_settings.py  apps.py  component.py  component_registry.py  logger.py  middleware.py  template_loader.py  types.py
django_components/safer_staticfiles/: apps.py
django_components/templatetags/: component_tags.py
django_components/utils/: autodiscover.py
docs/: CHANGELOG.md  README.md  SUMMARY.md  index.md  migrating_from_safer_staticfiles.md  slot_rendering.md  slots_and_blocks.md
docs/css/: style.css
docs/dev_guide/: index.md
docs/devguides/: dependency_mgmt.md
docs/getting_started/: adding_js_and_css.md  adding_slots.md  components_in_templates.md  your_first_component.md
docs/overrides/: main.html
docs/overview/: code_of_conduct.md  community.md  compatibility.md  contributing.md  development.md  installation.md  security_notes.md  welcome.md
docs/reference/: SUMMARY.md  api.md  commands.md  settings.md  signals.md  template_tags.md  urls.md
docs/scripts/: extensions.py  mkdocs_util.py  reference.py  setup.py
docs/templates/: reference_exceptions.md  reference_signals.md  reference_tagformatters.md  reference_templatevars.md
docs/user_guide/: SUMMARY.md  index.md  installation.md  requirements_compatibility.md  security.md
latest/: index.html  sitemap.xml
latest/CHANGELOG/: index.html
latest/SUMMARY/: index.html
latest/license/: index.html
latest/search/: search_index.json
latest/slot_rendering/: index.html
latest/slots_and_blocks/: index.html
sampleproject/: .gitignore  README.md  manage.py  requirements.txt
sampleproject/calendarapp/: apps.py  urls.py  views.py
sampleproject/components/: urls.py  (+3 more)
scripts/: gen_ref_nav.py  supported_versions.py
tests/: conftest.py  django_test_setup.py  test_attributes.py  test_autodiscover.py  test_cache.py  test_command_startcomponent.py  test_component.py  test_component_as_view.py  test_component_highlight.py  test_component_media.py  test_context.py  test_context2.py  test_css.py  test_dependencies.py  test_dependency_manager.py  test_dependency_rendering.py  test_dependency_rendering_e2e.py  test_exported_slots.py  test_expression.py  test_finders.py  test_html.py  test_html_parser.py  test_loader.py  test_node.py  test_performance.py  test_registry.py  test_safer_staticfiles.py  test_settings.py  test_signals.py  test_startcomponent_command.py  test_tag_formatter.py  test_tag_parser.py  test_template.py  test_template_loader.py  test_template_parser.py  test_templatetags.py  test_templatetags_component.py  test_templatetags_extends.py  test_templatetags_provide.py  test_templatetags_slot_fill.py  (+3 more)
(+746 files in other folders)
